# calculator.py

./: .gitignore  AGENTS.md  README.md  flake.nix  pyproject.toml
calc/: __init__.py  converter.py  gui.py  main.py
todo/: __init__.py
todo/todo/: __init__.py  database.py  main.py  models.py
todo/todo/jinja/: index.html
todo/todo/static/: style.css
