[tool.poetry]
name = "calc"
version = "0.1.1"
description = "Calculator and Todo applications with web interface"
authors = ["null-proto <relayx@duck.com>"]
readme = "README.md"

[tool.poetry.scripts]
calc = "calc.main:main"
gui = "calc.gui:main"
todo = "todo.todo.main:main"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
jinja2 = "^3.1.0"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
asyncpg = "^0.29.0"
alembic = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
